<resources>
    <string name="app_name">My Football DB</string>
    <string name="prev_match">Prev. Match</string>
    <string name="next_match">Next Match</string>
    <string name="favorites">Favorites</string>
    <string name="teams">Teams</string>
    <string name="matches">Matches</string>
    <string name="search">Search</string>
    <string name="weight_kg">Weight (Kg)</string>
    <string name="height_m">Height (m)</string>
</resources>

